tests/baselines/reference/genericAssignmentCompatOfFunctionSignatures1.errors.txt
tests/cases/compiler/genericAssignmentCompatOfFunctionSignatures1.ts(4,1): error TS2322: Type '<T, U 扩展 { a: T; b: 数字; }>(x: T, z: U) => 无值' is not assignable to type '<T, U 扩展 { a: T; b: 文字; }>(x: T, z: U) => 无值'.
  Types of parameters 'z' and 'z' are incompatible.
    Type 'U' is not assignable to type '{ a: T; b: 数字; }'.
      Type '{ a: T; b: 文字; }' is not assignable to type '{ a: T; b: 数字; }'.
        Types of property 'b' are incompatible.
          Type '文字' is not assignable to type '数字'.
tests/cases/compiler/genericAssignmentCompatOfFunctionSignatures1.ts(5,1): error TS2322: Type '<T, U 扩展 { a: T; b: 文字; }>(x: T, z: U) => 无值' is not assignable to type '<T, U 扩展 { a: T; b: 数字; }>(x: T, z: U) => 无值'.
  Types of parameters 'z' and 'z' are incompatible.
    Type 'U' is not assignable to type '{ a: T; b: 文字; }'.
      Type '{ a: T; b: 数字; }' is not assignable to type '{ a: T; b: 文字; }'.
        Types of property 'b' are incompatible.
          Type '数字' is not assignable to type '文字'.


==== tests/cases/compiler/genericAssignmentCompatOfFunctionSignatures1.ts (2 errors) ====
    var x1 = function foo3<T, U extends { a: T; b: string }>(x: T, z: U) { }
    var x2 = function foo3<T, U extends { a: T; b: number }>(x: T, z: U) { }
    
    x1 = x2;
    ~~
!!! error TS2322: Type '<T, U 扩展 { a: T; b: 数字; }>(x: T, z: U) => 无值' is not assignable to type '<T, U 扩展 { a: T; b: 文字; }>(x: T, z: U) => 无值'.
!!! error TS2322:   Types of parameters 'z' and 'z' are incompatible.
!!! error TS2322:     Type 'U' is not assignable to type '{ a: T; b: 数字; }'.
!!! error TS2322:       Type '{ a: T; b: 文字; }' is not assignable to type '{ a: T; b: 数字; }'.
!!! error TS2322:         Types of property 'b' are incompatible.
!!! error TS2322:           Type '文字' is not assignable to type '数字'.
    x2 = x1;
    ~~
!!! error TS2322: Type '<T, U 扩展 { a: T; b: 文字; }>(x: T, z: U) => 无值' is not assignable to type '<T, U 扩展 { a: T; b: 数字; }>(x: T, z: U) => 无值'.
!!! error TS2322:   Types of parameters 'z' and 'z' are incompatible.
!!! error TS2322:     Type 'U' is not assignable to type '{ a: T; b: 文字; }'.
!!! error TS2322:       Type '{ a: T; b: 数字; }' is not assignable to type '{ a: T; b: 文字; }'.
!!! error TS2322:         Types of property 'b' are incompatible.
!!! error TS2322:           Type '数字' is not assignable to type '文字'.